aplicando boas praticas ao desenvolver uma API
